--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,7 +355,7 @@ ul {
  */
 
 html {
-  font-family: Graphik, sans-serif; /* 1 */
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
@@ -22397,11 +22397,15 @@ video {
 }
 
 .font-sans {
-  font-family: Graphik, sans-serif
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
 .font-serif {
-  font-family: Merriweather, serif
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 }
 
 .text-xs {
@@ -51605,11 +51609,15 @@ video {
   }
 
   .sm\:font-sans {
-    font-family: Graphik, sans-serif
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
 
   .sm\:font-serif {
-    font-family: Merriweather, serif
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+  }
+
+  .sm\:font-mono {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
   }
 
   .sm\:text-xs {
@@ -80801,11 +80809,15 @@ video {
   }
 
   .md\:font-sans {
-    font-family: Graphik, sans-serif
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
 
   .md\:font-serif {
-    font-family: Merriweather, serif
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+  }
+
+  .md\:font-mono {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
   }
 
   .md\:text-xs {
@@ -109997,11 +110009,15 @@ video {
   }
 
   .lg\:font-sans {
-    font-family: Graphik, sans-serif
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
 
   .lg\:font-serif {
-    font-family: Merriweather, serif
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+  }
+
+  .lg\:font-mono {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
   }
 
   .lg\:text-xs {
@@ -139193,11 +139209,15 @@ video {
   }
 
   .xl\:font-sans {
-    font-family: Graphik, sans-serif
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
 
   .xl\:font-serif {
-    font-family: Merriweather, serif
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+  }
+
+  .xl\:font-mono {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
   }
 
   .xl\:text-xs {
@@ -168389,11 +168409,15 @@ video {
   }
 
   .\32xl\:font-sans {
-    font-family: Graphik, sans-serif
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
 
   .\32xl\:font-serif {
-    font-family: Merriweather, serif
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
+  }
+
+  .\32xl\:font-mono {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
   }
 
   .\32xl\:text-xs {
