La neta ya ni me acuerdo, pero por si hice algo importante

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /*
-Theme Name: JwR Alea
+Theme Name: JwR Basic
 Theme URI: https://wp-themes.gabinoramirez.com/
 Author: Gabino Ramírez
 Author URI: https://gabinoramirez.com/
-Description: Theme for Alea Consultorio.
-Tags: CRM, CMS, Facturación
+Description: Basic theme for developing customer Child themes.
+Tags: Basic, Structure, Best practices, functions, custom themes.
 Version: 1.0
 Requires at least: 5.0
 Tested up to: 5.4
-Requires PHP: 7.0
+Requires PHP: 7.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: jadwer
+Text Domain: JwR-Basic
 Este tema es privado, todos los redechos reservados.
 */
