--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@ Theme Name: JwR Basic
 Theme URI: https://wp-themes.gabinoramirez.com/
 Author: Gabino Ramírez
 Author URI: https://gabinoramirez.com/
-Description: Basic theme for developing customer Child themes.
-Tags: Basic, Structure, Best practices, functions, custom themes.
+Description: Basic theme to develop child based-functionallity themes.
+Tags: CRM, CMS, Facturación
 Version: 1.0
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 7.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: JwR-Basic
+Text Domain: JadweR
 Este tema es privado, todos los redechos reservados.
 */
+
