--- a/assets/css/jwr-theme-style.scss
+++ b/assets/css/jwr-theme-style.scss
@@ -2,3 +2,8 @@
 @import "../../node_modules/tailwindcss/components.css";
 @import "../../node_modules/tailwindcss/utilities.css";
 
+
+
+.custom-logo {
+    @apply flex flex-col lg:flex-row h-20 w-auto;
+}
